--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+<script src="menu.js"defer></script>
 </head>
 
 <body>
@@ -42,10 +43,30 @@
                     <button>Contato</button>
                 </a>
             </div>
+
+            <div class="btn-abrir-menu" id="btn-menu">
+                <i class="bi bi-three-dots-vertical"></i>
+            </div>
+
+            <div class="menu-mobile" id="menu-mobile">
+                <div class="btn-fechar">
+                    <i class="bi bi-x-lg"></i>
+                </div><!-- btn fechar -->
+                <nav>
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Especialidades</a></li>
+                        <li><a href="#">Projetos</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+           
+            </div><!-- menu mobile -->
+            <div class="overlay-menu" id="overlay-menu">
+
+            </div><!-- overlay-menu -->
         </div>
-
-
-
     </header>
 
     <main>
@@ -66,31 +87,104 @@
                     </div>
 
                     <div class="img-topo">
-                        <img src="img/Sem Título-2.png" alt="" width="400px">
+                        <img src="img/Sem Título-2.png" alt="" >
                     </div>
                 </div>
             </div>
         </section>
         <section class="especialidades">
             <div class="interface">
-                <h2 class="titulo">MINHAS <SPan>REDES</SPan></h2>
+                <h2 class="titulo">MINHAS <SPan>ESPECIALIDADES</SPan></h2>
                 <div class="flex">
                     <div class="especialidades-box">
-                        <i class="bi bi-instagram"></i>
-                        <h3>Instagram</h3>
+                        <i class="bi bi-code-square"></i>
+                        <h3>Website</h3>
+                        <p>A criação de um website envolve planejamento, design, escolha de tecnologias, criação de
+                            conteúdo relevante e otimizado, garantindo usabilidade e acessibilidade. A manutenção
+                            regular é essencial para acompanhar as tendências e manter a relevância.</p>
                     </div>
                     <div class="especialidades-box">
-                        <i class="bi bi-envelope"></i>
-                        <h3>E-mail</h3>
+                        <i class="bi bi-cart"></i>
+                        <h3>Loja online</h3>
+                        <p>A criação de uma loja online envolve escolha de plataforma, design atrativo e intuitivo,
+                            seleção de produtos com descrições detalhadas, segurança de dados, estratégias de marketing
+                            digital e análise de métricas para avaliar o desempenho. </p>
                     </div>
                     <div class="especialidades-box">
-                        <i class="bi bi-whatsapp"></i>
-                        <h3>Whatsapp</h3>
+                        <i class="bi bi-wordpress"></i>
+                        <h3>Blog</h3>
+                        <p>A criação de um blog envolve escolha da plataforma, design atraente, criação de conteúdo
+                            relevante, otimização para mecanismos de busca, promoção em redes sociais, interação com os
+                            leitores e análise de métricas de desempenho.</p>
                     </div>
+
 
                 </div>
             </div>
         </section>
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="img/Imagem do WhatsApp de 2024-04-10 à(s) 21.12.07_e3f43fe0.png" alt="">
+                    </div>
+                    <div class="txt-">
+                        <h2>MUITO PRAZER, <span>SOU OTAVIO CEZAR.</span> </h2>
+                        <P>Sou novo na área da computação mas estou disposto a aprender sobre tudo, ja trabalhei em
+                            outras áreas mas minha paixão mesmo sempre foi a área de TI, apenas no primeiro período
+                            criei esse portifólio, estou disposto e quero aprender mais.</P>
+                        <p>Sou de vila velha, curso ciências da computação na UVV (universidade de vila velha),
+                            programação e minha paixão e estou disposto a assimilar o trabalho e a faculdade.</p>
+                        <div class="btn-social">
+                            <a href="https://w.app/otaviocezar"><button><i
+                                        class="bi bi-whatsapp"></i></i></i></button></a>
+                            <a href="https://www.instagram.com/ocsarcinelli/"><button><i
+                                        class="bi bi-instagram"></i></button></a>
+                            <a
+                                href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Ba4gKMt9vSGaEz80zcFp8wg%3D%3D"><button><i
+                                        class="bi bi-linkedin"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">FALA <SPan>COMIGO.</SPan></h2>
+                <form method="post" action="envia.php">
+                    <input type="text" name="" id="nome" name="nome" placeholder="Seu nome completo:" required>
+                    <input type="text" name="" id="email" name="e-mail" placeholder="Seu e-mail :" required>
+                    <input type="text" name="" id="celular" name="celular" placeholder="Seu celular:">
+                    <textarea name="" id="" placeholder="Sua mensagem:" required></textarea>
+                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                        <div class="logo-footer">
+                            <img src="img/Black_White_Minimalist_Logo-removebg-preview.png" alt="" width="100px">
+                        </div>
+                        <div class="btn-social">
+                            <a href="https://w.app/otaviocezar"><button><i class="bi bi-whatsapp"></i></i></i></button></a>
+                            <a href="https://www.instagram.com/ocsarcinelli/"><button><i
+                                        class="bi bi-instagram"></i></button></a>
+                            <a
+                                href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Ba4gKMt9vSGaEz80zcFp8wg%3D%3D"><button><i
+                                        class="bi bi-linkedin"></i></button></a>
+                        </div>
+                </div>
+            </div><!-- line-footer -->
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-fill"></i> <a
+                        href="mailto:otaviocezar095@gmail.com">otaviocezar095@gmail.com</a></p>
+            </div><!-- line-footer -->
+        </div><!-- interface -->
+    </footer>
 </body>
+
 </html>
