--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p>Sou de vila velha, curso ciências da computação na UVV (universidade de vila velha),
                             programação e minha paixão e estou disposto a assimilar o trabalho e a faculdade.</p>
                         <div class="btn-social">
-                            <a href="https://w.app/otaviocezar"><button><i
+                            <a href="https://wa.me/+5527999317571"><button><i
                                         class="bi bi-whatsapp"></i></i></i></button></a>
                             <a href="https://www.instagram.com/ocsarcinelli/"><button><i
                                         class="bi bi-instagram"></i></button></a>
@@ -170,7 +170,7 @@
                             <img src="img/Black_White_Minimalist_Logo-removebg-preview.png" alt="" width="100px">
                         </div>
                         <div class="btn-social">
-                            <a href="https://w.app/otaviocezar"><button><i class="bi bi-whatsapp"></i></i></i></button></a>
+                            <a href="https://wa.me/+5527999317571"><button><i class="bi bi-whatsapp"></i></i></i></button></a>
                             <a href="https://www.instagram.com/ocsarcinelli/"><button><i
                                         class="bi bi-instagram"></i></button></a>
                             <a
