--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#">Especialidades</a></li>
                     <li><a href="#">Projetos</a></li>
